# server/framework/schemata/formSchema.go
@@ -12,13 +12,13 @@ import (
 
 type FormSchema struct {
 	Fields          map[string]Field            `json:"fields,omitempty"`
-	Relations       map[string]Relation         `json:"relations,omitempty"`
-	Group           []Group                     `json:"group,omitempty"`
+	Relations       map[string]Relationship     `json:"relations,omitempty"`
+	Groups          []Group                     `json:"group,omitempty"`
 	Inherits        []interfaces.Reference      `json:"inherits,omitempty"`
 	InheritedBy     []interfaces.Reference      `json:"inheritedBy,omitempty"`
 	Confidentiality enums.ConfidentialityString `json:"confidentiality,omitempty"`
-	Retention       time.Duration               `json:"retention,omitempty"`
+	Retention       time.Duration               `json:"retention,omitempty"` //nano to 290 year possible. we will use milli to 10 years. Can be an enum instead
 	Workflow        string                      `json:"workflow,omitempty"`
-	// Within interfaces.Reference `json:"within,omitempty"` //Used incase this is a nested schema //this is also a relation
+	Within          interfaces.Reference        `json:"within,omitempty"` //Used incase this is a nested schema //this is also a relation
 
 }
