# server/framework/schemata/relationship.go
@@ -3,7 +3,7 @@ package schemata
 //This is used to define the Field of the Data
 //do not use field name starting with _ here or any other schema. it is only in the interfaces package where we use in the json tag
 
-type Relation struct {
+type Relationship struct {
 	Field
 	ReverseName        string `json:"rName,omitempty"`
 	LinkedSchema       string `json:"schema,omitempty"`
